# restaurant_ws_v1

./: README.md
restaurant_ws/: orders_log.xlsx
restaurant_ws/src/butler_bot/: package.xml  setup.cfg  setup.py
restaurant_ws/src/butler_bot/butler_bot/: butler_bot_nav2.py  butler_node.py  dummy_butler_node.py  load_machine_sim.py  poses.py  turtle_bot.py
restaurant_ws/src/butler_bot/config/: nav2_params.yaml
restaurant_ws/src/butler_bot/launch/: amcl.launch.py  butler_restaurant_env.launch.py  map_server.launch.py  move_to.launch.py  nav2_slam.launch.py  navigation.launch.py  restaurant_with_turtle.launch.py
restaurant_ws/src/butler_bot/urdf/: butle__.urdf  butler.urdf  butler_1.urdf
restaurant_ws/src/butler_bot_interfaces/: CMakeLists.txt  package.xml
restaurant_ws/src/butler_bot_interfaces/action/: OrderExecutor.action
restaurant_ws/src/butler_bot_interfaces/srv/: MoveHome.srv  MovePose.srv  Order.srv
restaurant_ws/src/butler_order_manager/: package.xml  setup.cfg  setup.py
restaurant_ws/src/butler_order_manager/butler_order_manager/: config.py  order_client.py  order_dispatcher.py  order_executor.py  order_server.py  utils.py
restaurant_ws/src/butler_order_manager/launch/: butler_order_manager.launch.py
restaurant_ws/src/butler_order_manager/reference/: orders.json
restaurant_ws/src/restaurant/: package.xml  setup.cfg  setup.py
restaurant_ws/src/restaurant/config/maps/: map.pgm  map.yaml  restaurant.pgm  restaurant.yaml
restaurant_ws/src/restaurant/launch/: restaurant_with_butlerbot.launch.py  restaurant_with_turtlebot.launch.py
restaurant_ws/src/restaurant/models/: restaurant.world
restaurant_ws/src/restaurant/models/restaurant_env/: model.config  model.sdf
restaurant_ws/src/turtle_bot/robot_nav_utils/: package.xml  setup.cfg  setup.py
restaurant_ws/src/turtle_bot/robot_nav_utils/config/: pose.yaml
restaurant_ws/src/turtle_bot/robot_nav_utils/robot_nav_utils/: move_to.py
restaurant_ws/src/turtle_bot/turtlebot3_gazebo/launch/: turtlebot3_world.launch.py
restaurant_ws/src/turtle_bot/turtlebot3_gazebo/models/turtlebot3_world/: model.sdf
