<?xml version="1.0"?>
<package format="3">
  <name>restaurant</name>
  <version>0.0.0</version>
  <description>Launch package for restaurant simulation</description>
  <maintainer email="balaji@todo.todo">balaji</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>gazebo_ros</depend>
  <depend>butler_bot</depend>
  <depend>butler_order_manager</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
